Themization in progress: posts, menus, widgets

--- a/scss/default/_variables.scss
+++ b/scss/default/_variables.scss
@@ -62,3 +62,6 @@ $border-radius: 0;
 // main content parameters
 $content-width: 1024px;
 $content-align: center;
+
+// icon size
+$icon-size: 18px;
