--- a/scss/blocks/_badge.scss
+++ b/scss/blocks/_badge.scss
@@ -1,3 +1,17 @@
+@mixin badge-no-hover($font-family: $font-primary, $font-size: $font-code, $color: $accent) {
+    height: 100%;
+    text-align: center;
+
+    font-family: $font-family;
+    font-size: $font-size;
+
+    color: $white;
+    background-color: $color;
+
+    border: 1px solid $color;
+    border-radius: $border-radius;
+}
+
 @mixin badge-hidden($font-family: $font-primary, $font-size: $font-code, $color: $accent) {
     height: 100%;
     text-align: center;
