--- a/scss/wp/_nav.scss
+++ b/scss/wp/_nav.scss
@@ -167,15 +167,16 @@
     background-color: $bg-color;
 
     /* item list*/
-    & > ul {
+    ul {
       display: flex;
       flex-direction: column;
       width: 100%;
       padding-left: 0;
+      list-style-type: none;
 
       /* menu item */
       & > li {
-        list-style-type: none;
+
         padding: $padding / 2;
         padding-left: 0;
         width: 100%;
@@ -212,9 +213,7 @@
             /* submenu items */
             & > li {
               list-style-type: none;
-              padding-top: $padding;
-              padding-left: $padding;
-              padding-bottom: $padding;
+              padding: $padding/2 0 $padding/2 $padding/2;
 
               & > a {
                 @include link($color, $hover-color, false);
@@ -261,6 +260,7 @@
       /* menu item */
       & > li {
         display: flex;
+        flex-direction: column;
         align-items: baseline;
         list-style-type: none;
         padding: $padding;
@@ -268,6 +268,7 @@
 
         @include media-break-up($medium) {
             width: auto;
+            flex-direction: row;
         }
 
         a {
@@ -313,9 +314,13 @@
 
             /* submenu items */
             & > li {
+                display: flex;
+                flex-direction: column;
               list-style-type: none;
 
               @include media-break-up($medium) {
+                  display: flex;
+                  flex-direction: row;
                   padding: 0;
                   padding-left: $padding;
                   padding-right: $padding;
