--- a/scss/theme/_nav.scss
+++ b/scss/theme/_nav.scss
@@ -36,30 +36,74 @@ nav.swtk-navbar {
     @include horizontal-sidebar-menu($font-primary, $font-smaller, $primary, $secondary, none);
 }
 
-div.swtk-pagination,
-div.swtk-comments-pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+div.swtk-pagination {
     @include pagination();
+    padding: $padding 0 0 $padding;
+    width: 100%;
+
+    border-top: 1px solid $accent;
+
 
     a {
-        @include badge-outline($font-primary, $font-regular, $secondary);
+        color: $secondary;
+        &:hover {
+            color: $accent;
+        }
     }
 
     span.current {
-        @include badge-no-hover($font-primary, $font-regular, $secondary);
+        color: $dark;
     }
 
     a, span.current {
-        padding: $padding / 2;
-        margin: 0;
+        font-family: $font-primary;
+        font-size: $font-regular;
+        padding: 0 $padding * 2 0 0;
+    }
+
+    & > .navigation.pagination {
+        padding-left: $padding;
+    }
+}
+
+div.swtk-comments-pagination {
+    @include pagination();
+    padding: $padding 0 0 0;
+    width: 100%;
+
+
+    border-top: 1px solid $accent;
+
+    a {
+        color: $secondary;
+        &:hover {
+            color: $accent;
+        }
+    }
+
+    span.current {
+        color: $dark;
+    }
+
+    a, span.current {
+        font-family: $font-primary;
+        font-size: $font-regular;
+        padding: 0 0 0 $padding * 2;
     }
 }
 
 .swtk-posts-navigation {
-    @include posts-navigation();
+    @include pagination();
+    justify-content: space-between;
     padding: $padding;
     font-family: $font-primary;
     font-size: $font-code;
+
+    a:first-child:before {
+        content: '<<';
+    }
+
+    a:last-child:after {
+        content: '>>';
+    }
 }
