--- a/scss/wp/_comments.scss
+++ b/scss/wp/_comments.scss
@@ -3,15 +3,50 @@
     display: flex;
     flex-direction: column;
 
-    font-family: $font-primary;
-    font-size: $font-regular;
-
-    .swtk-comments-title {
-        @extend .swtk-h5;
-    }
-
     .comment-form-comment {
         display: flex;
         flex-direction: column;
+    }
+}
+
+@mixin comments-title() {
+    .swtk-comments-title {
+        @content;
+    }
+}
+
+@mixin comments-list() {
+    .swtk-comments-list {
+        @content;
+    }
+}
+
+@mixin comment() {
+    .comment {
+        @content;
+    }
+}
+
+@mixin comment-body() {
+    .comment-body {
+        @content;
+    }
+}
+
+@mixin comment-author() {
+    .comment-author {
+        @content;
+    }
+}
+
+@mixin comment-meta() {
+    .comment-meta {
+        @content;
+    }
+}
+
+@mixin comment-reply() {
+    .reply {
+        @content;
     }
 }
