--- a/theme/editor-style.css
+++ b/theme/editor-style.css
@@ -163,6 +163,22 @@ p, li {
   font-size: 14px;
   color: #2c2c2d; }
 
+code, pre {
+  font-family: "Roboto Mono", monospace;
+  font-size: 12px;
+  color: #2c2c2d; }
+
+blockquote {
+  padding: 1em;
+  border-left: 1px solid #4abdac; }
+  blockquote * {
+    font-family: "Roboto Slab", serif;
+    font-size: 16px; }
+  blockquote cite {
+    font-family: "Roboto Slab", serif;
+    font-size: 14px;
+    color: #4abdac; }
+
 a {
   color: #4abdac;
   text-decoration: none; }
